# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.477 2005/11/12 02:44:09 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  11 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  basic HTTP auth

  10 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  dynamic module reloading (yipee!)
  send 'Last-Modified' header for real files
  respond to HEAD with just headers
  src/net/server/handlers/WebGLIHandler.py:
  icons for drives

  7 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/handlers/WebGLIHandler.py:
  initial 'pretty' partition table display support
  clicking partition in 'pretty' display works instead of radio buttons
  radio buttons and pretty display work together
  META redirect instead of javascript
  pretty display stretches across entire screen
  'Recommended layout' and 'Clear drive' functions
  properly catch exceptions from do_recommended()
  src/GLIArchitectureTemplate.py:
  replace preinst, copy, postinst, rm steps with qmerge
  whoops...that shouldn't have been commented out
  create image_dir with -p in copy_pkg_to_chroot()
  more generic of symlink crappiness
  new copy_pkg_to_chroot() actually works now

  6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  initial generic disk support
  fixes for add_partition() code
  src/net/server/handlers/WebGLIHandler.py:
  added support for creating generic disks
  add new partition working
  save and delete partitions

  6 Nov 2005; Preston Cody <codeman@gentoo.org>
  webgli: Partitioning making progress.

  5 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  copy_pkg_to_chroot() overhaul - does install the Right Way(TM) (copy files to
  image dir, run pkg_setup, pkg_preinst, copy to /, pkg_postinst, remove image
  dir) and works around /etc/gconf symlink problem
