@@ -1,9 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.477 2005/11/12 02:44:09 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.478 2005/11/12 16:41:53 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  12 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/gliserv.py:
+  'classier' 401 message
+  proper commandline parsing
+  help via -h
+  user/pass can be specificed via commandline option
 
   11 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
